--- a/swingcr/src/style.css
+++ b/swingcr/src/style.css
@@ -338,3 +338,25 @@ footer {
   font-size: 14px;
   color: #a7c0d4;
 }
+
+@media (max-width: 768px) {
+  .contenido-sobre-nosotros {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #todos {
+    max-width: 80%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-columna {
+    margin: 20px 0;
+  }
+}
